Corrected the alignment of the elements in the rows.

--- a/dashboard/assets/s1.css
+++ b/dashboard/assets/s1.css
@@ -107,6 +107,10 @@
     width: 100%;
     margin-left: 0;
   }
+  .full-width.column {
+    width: 100%;
+    margin-left: 10px;
+  }
 
   .one-third.column {
     width: 30.6666666667%;
